src/components/Folder/Folder.scss
@import "../../colors.scss";

.folder {
  position: relative;

  display: flex;
  flex-direction: column;
  justify-content: start;

  width: auto;
  height: auto;

  overflow: hidden;

  flex-shrink: 0;
  .card-container {
    display: flex;
    flex-direction: column;
    align-items: center;

    margin: 0.5rem 0;
    padding: 0 1rem;

    height: 100%;

    gap: 0.5rem;
    overflow-y: scroll;
  }

  .folder-title {
    display: flex;
    align-items: center;
    justify-content: center;

    min-height: 2.5rem;
    
    padding: 0.25rem 0.5rem;

    border-radius: 8px;
    border-top-left-radius: 0;
    border-top-right-radius: 0;

    
    .folder-title-element {
      text-align: center;
    }

    .folder-card-amount {
      min-width: 10vw;
      width: auto;
    }
  }

  .buttons-utility-container {
    border-radius: 8px;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
  
    min-height: 2.5rem;
  }
}

